Refactor ClienteController and remove legacy servlets
- Added methods to ClienteController for fetching, updating, and deleting clients.
- Removed ClienteServlet, DashboardClienteServlet, DashboardPrestadorServlet, HorarioServlet, LoginServlet, LogoutServlet, NotificacaoServlet, PagamentoServlet, PostmanServlet, PublicoServlet, and ServicoServlet as they were replaced by REST controllers.
- Updated HorarioDisponivelController to handle null ID in buscarPorId method.
- Enhanced AgendamentoService and ClienteService with validation and error handling.
- Updated DataUtil to use Locale correctly.
- Adjusted pom.xml for proper source and resource directories.
- Modified application.properties to use environment variable for database password.